Add new recipe page for Macncheese. Update index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <h1>Odin's Recipes</h1>
+    <br>
 
     <a href="./recipes/lasagna.html">Homemade Lasagna</a>
+    <br>
+
+    <a href="./recipes/spaghetti.html">Spaghetti</a>
+    <br>
+
+    <a href="./recipes/macncheese.html">Mac and Cheese</a>
 </body>
 </html>
